# mini-claude-code

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/mini_claude_code/: __init__.py  __main__.py  agent.py  frontmatter.py  mcp_client.py  memory.py  prompt.py  session.py  skills.py  subagent.py  tools.py  ui.py
src/mini_claude_code/backends/: __init__.py  anthropic.py  base.py  openai.py
tests/: test_caching.py  test_surrogates.py
